@@ -73,6 +73,68 @@ typedef struct {
 	guint taskpad_focused : 1;
 } FocusData;
 
+static void
+file_new_calendar_cb (BonoboUIComponent *uic, gpointer data, const char *path)
+{
+	GnomeCalendar *gcal;
+
+	gcal = GNOME_CALENDAR (data);
+
+	/* FIXME: open dialog for creating a new calendar */
+}
+
+static void
+file_new_appointment_cb (BonoboUIComponent *uic, gpointer data, const char *path)
+{
+	GnomeCalendar *gcal;
+	time_t dtstart, dtend;
+	ECalView *cal_view;
+
+	gcal = GNOME_CALENDAR (data);
+
+	cal_view = (ECalView *) gnome_calendar_get_current_view_widget (gcal);
+	e_cal_view_get_selected_time_range (cal_view, &dtstart, &dtend);
+	gnome_calendar_new_appointment_for (gcal, dtstart, dtend, FALSE, FALSE);
+}
+
+static void
+file_new_event_cb (BonoboUIComponent *uic, gpointer data, const char *path)
+{
+	GnomeCalendar *gcal;
+	time_t dtstart, dtend;
+	ECalView *cal_view;
+
+	gcal = GNOME_CALENDAR (data);
+
+	cal_view = (ECalView *) gnome_calendar_get_current_view_widget (gcal);
+	e_cal_view_get_selected_time_range (cal_view, &dtstart, &dtend);
+	gnome_calendar_new_appointment_for (gcal, dtstart, dtend, TRUE, FALSE);
+}
+
+static void
+file_new_meeting_cb (BonoboUIComponent *uic, gpointer data, const char *path)
+{
+	GnomeCalendar *gcal;
+	time_t dtstart, dtend;
+	ECalView *cal_view;
+
+	gcal = GNOME_CALENDAR (data);
+
+	cal_view = (ECalView *) gnome_calendar_get_current_view_widget (gcal);
+	e_cal_view_get_selected_time_range (cal_view, &dtstart, &dtend);
+	gnome_calendar_new_appointment_for (gcal, dtstart, dtend, FALSE, TRUE);
+}
+
+static void
+file_new_task_cb (BonoboUIComponent *uic, gpointer data, const char *path)
+{
+	GnomeCalendar *gcal;
+
+	gcal = GNOME_CALENDAR (data);
+
+	gnome_calendar_new_task (gcal);
+}
+
 /* Prints the calendar at its current view and time range */
 static void
 print (GnomeCalendar *gcal, gboolean preview)
@@ -590,6 +652,7 @@ sensitize_calendar_commands (GnomeCalendar *gcal, BonoboControl *control, gboole
 	GList *list;
 	int n_selected;
 	GtkWidget *view;
+	CalClient *cal_client;
 	gboolean read_only = FALSE, has_recurrences;
 	
 	uic = bonobo_control_get_ui_component (control);
@@ -601,10 +664,22 @@ sensitize_calendar_commands (GnomeCalendar *gcal, BonoboControl *control, gboole
 	n_selected = enable ? g_list_length (list) : 0;
 
 	event = (ECalViewEvent *) list ? list->data : NULL;
-	cal_client_is_read_only (event ? event->comp_data->client :
-				 e_cal_model_get_default_client (gnome_calendar_get_calendar_model (gcal)), 
-				 &read_only, NULL);
+	if (event) {
+		cal_client_is_read_only (event->comp_data->client, &read_only, NULL);
+	} else {
+		cal_client = e_cal_model_get_default_client (gnome_calendar_get_calendar_model (gcal));
+		if (cal_client)
+			cal_client_is_read_only (cal_client, &read_only, NULL);
+		else
+			read_only = TRUE;
+	}
 
+	bonobo_ui_component_set_prop (uic, "/commands/NewAppointment", "sensitive",
+				      read_only ? "0" : "1", NULL);
+	bonobo_ui_component_set_prop (uic, "/commands/NewAllDayEvent", "sensitive",
+				      read_only ? "0" : "1", NULL);
+	bonobo_ui_component_set_prop (uic, "/commands/NewMeeting", "sensitive",
+				      read_only ? "0" : "1", NULL);
 	bonobo_ui_component_set_prop (uic, "/commands/Cut", "sensitive",
 				      n_selected == 0 || read_only ? "0" : "1",
 				      NULL);
@@ -649,14 +724,21 @@ sensitize_taskpad_commands (GnomeCalendar *gcal, BonoboControl *control, gboolea
 {
 	BonoboUIComponent *uic;
 	int n_selected;
+	CalClient *cal_client;
 	gboolean read_only = TRUE;
 	
 	uic = bonobo_control_get_ui_component (control);
 	g_assert (uic != NULL);
 
 	n_selected = enable ? gnome_calendar_get_num_tasks_selected (gcal) : 0;
-	cal_client_is_read_only (gnome_calendar_get_task_pad_cal_client (gcal), &read_only, NULL);
+	cal_client = gnome_calendar_get_task_pad_cal_client (gcal);
+	if (cal_client)
+		cal_client_is_read_only (cal_client, &read_only, NULL);
+	else
+		read_only = TRUE;
 
+	bonobo_ui_component_set_prop (uic, "/commands/NewTask", "sensitive",
+				      read_only ? "0" : "1", NULL);
 	bonobo_ui_component_set_prop (uic, "/commands/Cut", "sensitive",
 				      n_selected == 0 || read_only ? "0" : "1",
 				      NULL);
@@ -765,6 +847,11 @@ gcal_taskpad_focus_change_cb (GnomeCalendar *gcal, gboolean in, gpointer data)
 
 
 static BonoboUIVerb verbs [] = {
+	BONOBO_UI_VERB ("NewCalendar", file_new_calendar_cb),
+	BONOBO_UI_VERB ("NewAppointment", file_new_appointment_cb),
+	BONOBO_UI_VERB ("NewAllDayEvent", file_new_event_cb),
+	BONOBO_UI_VERB ("NewMeeting", file_new_meeting_cb),
+	BONOBO_UI_VERB ("NewTask", file_new_task_cb),
 	BONOBO_UI_VERB ("CalendarPrint", file_print_cb),
 	BONOBO_UI_VERB ("CalendarPrintPreview", file_print_preview_cb),
 
@@ -793,10 +880,14 @@ static BonoboUIVerb verbs [] = {
 
 static EPixmap pixmaps [] =
 {
-	E_PIXMAP ("/Toolbar/DayView",					      "buttons/dayview.xpm"),
-	E_PIXMAP ("/Toolbar/WorkWeekView",				      "buttons/workweekview.xpm"),
-	E_PIXMAP ("/Toolbar/WeekView",					      "buttons/weekview.xpm"),
-	E_PIXMAP ("/Toolbar/MonthView",					      "buttons/monthview.xpm"),
+	E_PIXMAP ("/commands/NewAppointment", "new_appointment.xpm"),
+	E_PIXMAP ("/commands/NewAllDayEvent", "new_all_day_event.png"),
+	E_PIXMAP ("/commands/NewMeeting",     "meeting-request-16.png"),
+	E_PIXMAP ("/commands/NewTask",        "new_task-16.png"),
+	E_PIXMAP ("/Toolbar/DayView",         "buttons/dayview.xpm"),
+	E_PIXMAP ("/Toolbar/WorkWeekView",    "buttons/workweekview.xpm"),
+	E_PIXMAP ("/Toolbar/WeekView",        "buttons/weekview.xpm"),
+	E_PIXMAP ("/Toolbar/MonthView",       "buttons/monthview.xpm"),
 
 	E_PIXMAP_END
 };
